zero-damage/k8s/deployment-dflimg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dflimg
  labels:
    app: dflimg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dflimg
  template:
    metadata:
      labels:
        app: dflimg
    spec:
      nodeSelector:
        dfl.mn/datacentre: digitalocean
      containers:
        - name: dflimg
          image: duffleman/dflimg:latest
          ports:
          - containerPort: 80
