zero-damage/k8s/sandbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox
  labels:
    app: sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
      - name: sandbox
        image: alpine
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
