zero-damage/k8s/service-dflimg.yaml
kind: Service
apiVersion: v1
metadata:
  name: dflimg
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
      app: dflimg
