zero-damage/k8s/service-redis-dflimg.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-dflimg
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
      app: redis-dflimg
